Change stylesheet reference in index.html
Updated stylesheet link from 'final project.css' to 'styles.css'.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>simple project</title>
         <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="final project.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
    <header>
@@ -58,3 +58,4 @@
 
     </body>
 </html>
+
