--- a/hoppy.htm
+++ b/hoppy.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoppies</title>
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="final project.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -31,4 +31,5 @@
     <li>Reading</li>
     </ul>
 </body>
+
 </html>
